syntax = "proto3";
package AssetMantle.modules.x.orders.transactions.immediate;

import "AssetMantle/schema/ids/base/classification_id.proto";
import "AssetMantle/schema/ids/base/identity_id.proto";
import "AssetMantle/schema/ids/base/asset_id.proto";
import "AssetMantle/schema/lists/base/property_list.proto";
import "AssetMantle/schema/types/base/height.proto";

message Message {
  string from = 1;
  AssetMantle.schema.ids.base.IdentityID from_i_d = 2;
  AssetMantle.schema.ids.base.ClassificationID classification_i_d = 3;
  AssetMantle.schema.ids.base.IdentityID taker_i_d = 4;
  AssetMantle.schema.ids.base.AssetID maker_asset_i_d = 5;
  AssetMantle.schema.ids.base.AssetID taker_asset_i_d = 6;
  AssetMantle.schema.types.base.Height expires_in = 7;
  string maker_split = 8;
  string taker_split = 9;
  AssetMantle.schema.lists.base.PropertyList immutable_meta_properties = 10;
  AssetMantle.schema.lists.base.PropertyList immutable_properties = 11;
  AssetMantle.schema.lists.base.PropertyList mutable_meta_properties = 12;
  AssetMantle.schema.lists.base.PropertyList mutable_properties = 13;
}